WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256628
PageshowEventPersistence and NodeListInvalidationType should be enum classes
https://bugs.webkit.org/show_bug.cgi?id=256628
Summary
PageshowEventPersistence and NodeListInvalidationType should be enum classes
Ryosuke Niwa
Reported
2023-05-10 22:05:04 PDT
Turn these enums into enum classes.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2023-05-10 22:07:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13739
EWS
Comment 2
2023-05-11 00:53:34 PDT
Committed
263952@main
(5929d8817e58): <
https://commits.webkit.org/263952@main
> Reviewed commits have been landed. Closing PR #13739 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug