PageshowEventPersistence and NodeListInvalidationType should be enum classes https://bugs.webkit.org/show_bug.cgi?id=256628

Reviewed by Antti Koivisto.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::implicitClose):
(WebCore::Document::registerNodeListForInvalidation):
(WebCore::Document::unregisterNodeListForInvalidation):
(WebCore::Document::registerCollection):
(WebCore::Document::unregisterCollection):
(WebCore::Document::collectionCachedIdNameMap):
(WebCore::Document::collectionWillClearIdNameMap):
(WebCore::Document::dispatchPageshowEvent):
(WebCore::Document::dispatchPagehideEvent):
* Source/WebCore/dom/Document.h:
* Source/WebCore/dom/LiveNodeListInlines.h:
(WebCore::shouldInvalidateTypeOnAttributeChange):
* Source/WebCore/dom/NameNodeList.cpp:
(WebCore::NameNodeList::NameNodeList):
* Source/WebCore/dom/Node.cpp:
(WebCore::Document::shouldInvalidateNodeListAndCollectionCachesForAttribute const):
* Source/WebCore/history/CachedPage.cpp:
(WebCore::firePageShowEvent):
* Source/WebCore/html/HTMLCollection.cpp:
(WebCore::invalidationTypeExcludingIdAndNameAttributes):
(WebCore::HTMLCollection::HTMLCollection):
* Source/WebCore/html/LabelsNodeList.cpp:
(WebCore::LabelsNodeList::LabelsNodeList):
* Source/WebCore/html/RadioNodeList.cpp:
(WebCore::RadioNodeList::RadioNodeList):
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::dispatchUnloadEvents):
* Source/WebCore/page/LocalDOMWindow.cpp:
(WebCore::LocalDOMWindow::dispatchAllPendingUnloadEvents):
* Source/WebCore/page/ios/FrameIOS.mm:
(WebCore::LocalFrame::dispatchPageHideEventBeforePause):
(WebCore::LocalFrame::dispatchPageShowEventBeforeResume):

Canonical link: https://commits.webkit.org/263952@main